[package]
name = "newsletter_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "newsletter_in_rust"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.10"

